<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    tools:context=".Activitys.ActivityHelp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">

        <ImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_arrow_back_ios"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_25"
            tools:ignore="SpUsage"
            android:textColor="@color/white"
            android:text="@string/how_to_use_presets"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/size_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/size_25"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/video_tutorial"/>



           <ImageView
               android:id="@+id/help_video_create"
               android:layout_gravity="center"
               android:layout_width="200dp"
               android:layout_height="@dimen/size_200"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/size_25"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                android:textColor="@color/white"
                android:text="@string/text_guide"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/size_20"
                tools:ignore="SpUsage"
                android:textColor="@color/white"
                android:text="@string/text_guide_note"/>
            <TextView
                android:id="@+id/txt_lightroom_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="Install Lightroom"
                android:textColor="@color/blue_light"
                android:textStyle="bold"/>
            <TextView
            android:layout_margin="@dimen/margin_8"
            android:text="@string/Note"
            android:layout_width="match_parent"
            android:textSize="@dimen/size_20"
                android:textColor="@color/white"
            android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/note_2"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_8"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_1"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <!--<ImageView
                android:id="@+id/txt_help_2"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>-->
           <!-- <ImageView
                android:id="@+id/txt_help_3"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="150dp"/>-->
           <!-- <ImageView
                android:id="@+id/txt_help_4"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="150dp"/>-->

            <TextView
                android:text="@string/note_3"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_8"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_5"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <ImageView
                android:id="@+id/txt_help_6"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_4"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_7"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>

            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_5"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/size_40"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="@string/not_6"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_25"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/size_25"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/video_tutorial"/>
            <ImageView
                android:id="@+id/help_video_save"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="@dimen/size_200"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/size_25"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                android:textColor="@color/white"
                android:text="@string/text_guide"/>

            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_7"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_8"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_8"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_9"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_9"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_10"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_11"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_12"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_10"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_13"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/txt_help_11"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_height="300dp"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_14"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_15"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="@dimen/margin_8"
                android:text="@string/note_16"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_20"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/size_40"
                android:layout_height="wrap_content"/>









        </LinearLayout>
    </ScrollView>


</LinearLayout>
