<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/black"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/lnr_drawer_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:background="@color/setting_layout"
            android:paddingBottom="@dimen/size_20"
            android:paddingTop="@dimen/size_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/theme"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_theme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="#0E101B"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_rate" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_invite_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/invite_your_friend"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_friend" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_other_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/other_apps"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_other_apps" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_contact" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="Privacy policy"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_policy" />





        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@color/setting_layout"
            android:paddingBottom="@dimen/size_20"
            android:paddingTop="@dimen/size_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16"
                android:drawablePadding="@dimen/size_16"
                android:gravity="center_vertical"
                android:text="@string/follow_us"
                android:textColor="@color/white"
                android:textSize="@dimen/size17"
                app:drawableLeftCompat="@drawable/ic_instagram" />
        </LinearLayout>




        <!-- <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
         </com.google.android.gms.ads.AdView>-->


    </LinearLayout>


</LinearLayout>
